kubernetes/staging/deployment.yaml
---
######## API ########
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-staging
  namespace: default
  labels:
    env: staging
    app: api-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-staging
  template:
    metadata:
      labels:
        env: staging
        app: api-staging
    spec:
      containers:
      - name: api-staging
        image: gcr.io/mee-261822/api:latest
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
        ports:
        - containerPort: 80
---
######## CLIENT ########
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: client-staging
  namespace: default
  labels:
    env: staging
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-staging
  template:
    metadata:
      labels:
        env: staging
        app: client-staging
    spec:
      containers:
      - name: client-staging
        image: gcr.io/mee-261822/client:latest
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
        ports:
        - containerPort: 80
---
######## ELASTICSEARCH ########
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch-staging
  namespace: default
  labels:
    env: staging
    app: elasticsearch-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch-staging
  template:
    metadata:
      labels:
        env: staging
        app: elasticsearch-staging
    spec:
      containers:
      - name: elasticsearch-staging
        image: gcr.io/mee-261822/elasticsearch:latest
        resources:
          requests:
            cpu: 10m
            memory: 256Mi
---
